WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205761
DumpRenderTree doesn't always call updateRendering() when a test completes
https://bugs.webkit.org/show_bug.cgi?id=205761
Summary
DumpRenderTree doesn't always call updateRendering() when a test completes
Simon Fraser (smfr)
Reported
2020-01-03 18:22:11 PST
Fix a souce of WebKit1 test flakiness
Attachments
Patch
(5.36 KB, patch)
2020-01-03 18:27 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(8.68 KB, patch)
2020-01-03 18:44 PST
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-01-03 18:27:28 PST
Created
attachment 386740
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-01-03 18:44:14 PST
Created
attachment 386743
[details]
Patch
Darin Adler
Comment 3
2020-01-03 19:30:55 PST
Comment on
attachment 386743
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=386743&action=review
> Source/WebKitLegacy/mac/WebView/WebView.mm:4775 > + // Ensure fixed positions layers are where they should be.
I think there's a grammar error here. I should be "fixed position layers" maybe?
Simon Fraser (smfr)
Comment 4
2020-01-05 09:58:40 PST
https://trac.webkit.org/changeset/254042/webkit
Radar WebKit Bug Importer
Comment 5
2020-01-05 09:59:23 PST
<
rdar://problem/58325946
>
Truitt Savell
Comment 6
2020-01-06 10:41:29 PST
The changes in
https://trac.webkit.org/changeset/254042/webkit
has broken 5 pageoverlay/overlay- tests on Mac wk1 Tracking in
https://bugs.webkit.org/show_bug.cgi?id=205810
Ryosuke Niwa
Comment 7
2020-01-13 20:16:18 PST
Nice! Thanks for this fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug